--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,9 @@ button:hover {
   color: #f77062;
   transition: all 0.3s ease;
 }
+
+/*!Sta je ovo @media ? */
+
 @media screen and (max-width: 960px) {
   .navbar__container {
     display: flex;
@@ -108,8 +111,9 @@ button:hover {
   transition: all 0.5s ease;
   height: 50vh;
   z-index: -1;
+  background: #131313;
 }
-.navbar__menu.active {
+.navbar__menu .active {
   background: #131313;
   top: 100%;
   opacity: 1;
@@ -127,7 +131,7 @@ button:hover {
   width: 25px;
   height: 3px;
   margin: 5px auto;
-  transition: all 0.3s ease;
+  transition: all 0.3s ease-in-out;
   background: #fff;
 }
 .navbar__item {
@@ -139,6 +143,9 @@ button:hover {
   width: 100%;
   display: table;
 }
+
+/*! #mobile-menu? */
+
 #mobile-menu {
   position: absolute;
   top: 20%;
@@ -152,7 +159,7 @@ button:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 80px;
+  width: 80%;
   height: 80px;
   margin: 0;
 }
