--- a/styles.css
+++ b/styles.css
@@ -108,13 +108,15 @@ button:hover {
   margin: 0;
   width: 100%;
   position: absolute;
+  top: -1000px;
+  opacity: 0;
   transition: all 0.5s ease;
   height: 50vh;
   z-index: -1;
-  background: #131313;
+  background: gray;
 }
-.navbar__menu .active {
-  background: #131313;
+.navbar__menu.active {
+  background: gray;
   top: 100%;
   opacity: 1;
   transition: all 0.5s ease;
@@ -167,4 +169,13 @@ button:hover {
 .navbar__toggle .bar {
   display: block;
   cursor: pointer;
+}
+#mobile-menu.is-active .bar:nth-child(2) {
+  opacity: 0;
+}
+#mobile-menu.is-active .bar:nth-child(1) {
+  transform: translateY(8px) rotate(45deg);
+}
+#mobile-menu.is-active .bar:nth-child(3) {
+  transform: translateY(-8px) rotate(-45deg);
 }
