--- a/styles.css
+++ b/styles.css
@@ -269,7 +269,6 @@ button:hover {
   height: 80%;
   width: 100%;
   border-radius: 8px;
-  border-bottom: linear-gradient(to top, "", gray);
 }
 /*? Mobile responsive */
 @media screen and (max-width: 768px) {
@@ -317,4 +316,94 @@ button:hover {
     padding: 12px 36px;
     margin: 2.5rem 0;
   }
-} ;
+}
+/*! Services Section CSS */
+.services {
+  background-color: darkgray;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+}
+.services h1 {
+  background-color: #ff8177;
+  background-image: linear-gradient(
+    to right,
+    #ff8177 0%,
+    #ff867a 0%,
+    #ff8c7f 21%,
+    #f99185 52%,
+    #cf556c 78%,
+    #b12a5b 100%
+  );
+  background-size: 100%;
+  margin-bottom: 5rem;
+  font-size: 2.5rem;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
+.services__container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.services__card {
+  margin: 1rem;
+  height: 525px;
+  width: 400px;
+  border-radius: 4px;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(17, 17, 17, 0.6) 100%
+    ),
+    url("/img/iron-man.jpg");
+  background-size: cover;
+  position: relative;
+  color: #fff;
+}
+.services__card:nth-child(2) {
+  margin: 1rem;
+  height: 525px;
+  width: 400px;
+  border-radius: 4px;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(17, 17, 17, 0.6) 100%
+    ),
+    url("/img/real-man.jpg");
+  background-size: cover;
+  position: relative;
+  color: #fff;
+}
+.services h2 {
+  position: absolute;
+  top: 350px;
+  left: 30px;
+}
+.services__card p {
+  position: absolute;
+  top: 400px;
+  left: 30px;
+}
+.services__card button {
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  background: #f77062;
+  position: absolute;
+  top: 440px;
+  left: 30px;
+  font-size: 1rem;
+}
+
+.services__card:hover {
+  transform: scale(1.075);
+  transition: 0.2s ease-in-out;
+  cursor: pointer;
+}
