--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@
   height: 80px;
   z-index: 1;
   width: 100%;
-  max-width: 1300px;
+  max-width: 2000px;
   margin: 0 auto;
   padding: 0 50px;
 }
@@ -42,10 +42,10 @@
   margin-right: 0.5rem;
 }
 .navbar__menu {
-  display: flex;
+  /* display: flex;
   align-items: center;
   list-style: none;
-  text-align: center;
+  text-align: center; */
 }
 .navbar__item {
   height: 80px;
@@ -106,8 +106,10 @@ button:hover {
   display: grid;
   grid-template-columns: auto;
   margin: 0;
-  width: 100%;
-  position: absolute;
+  width: 10%;
+  position: flex;
+  justify-content: right;
+  align-items: right;
   top: -1000px;
   opacity: 0;
   transition: all 0.5s ease;
@@ -121,8 +123,11 @@ button:hover {
   opacity: 1;
   transition: all 0.5s ease;
   z-index: 99;
-  height: 50vh;
+  height: 4vh;
   font-size: 1.6rem;
+  position: flex;
+  justify-content: right;
+  align-items: right;
 }
 
 #navbar__logo {
@@ -150,18 +155,22 @@ button:hover {
 
 #mobile-menu {
   position: absolute;
+  /* position: relative; */
   top: 20%;
-  right: 5%;
+  right: 1%;
   transform: translate(5%, 20%);
 }
 .navbar__btn {
+  text-align: center;
   padding-bottom: 2rem;
+  width: 100%;
+  padding-right: 150px;
 }
 .button {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 80%;
+  width: 100%;
   height: 80px;
   margin: 0;
 }
