--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ button:hover {
 
 /*!Sta je ovo @media ? */
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 250px) {
   .navbar__container {
     display: flex;
     justify-content: space-between;
@@ -281,6 +281,32 @@ button:hover {
 }
 /*? Mobile responsive */
 @media screen and (max-width: 768px) {
+  .navbar__menu {
+    display: inline-table;
+    margin: 0;
+    width: 10%;
+    position: flex;
+    justify-content: center;
+    align-items: center;
+    top: -1000px;
+    opacity: 0;
+    transition: all 0.5s ease;
+    height: 50vh;
+    z-index: -1;
+    background: rgb(0, 0, 0);
+  }
+  .navbar__menu.active {
+    background: none;
+    top: 100%;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 99;
+    height: 4vh;
+    font-size: 1.5rem;
+    position: flex;
+    justify-content: center;
+    align-items: center;
+  }
   .main__container {
     display: grid;
     grid-template-columns: auto;
@@ -309,6 +335,32 @@ button:hover {
   }
 }
 @media screen and (max-width: 480px) {
+  .navbar__menu {
+    display: inline-table;
+    margin: 0;
+    width: 10%;
+    position: flex;
+    justify-content: center;
+    align-items: center;
+    top: -1000px;
+    opacity: 0;
+    transition: all 0.5s ease;
+    height: 50vh;
+    z-index: -1;
+    background: rgb(0, 0, 0);
+  }
+  .navbar__menu.active {
+    background: none;
+    top: 100%;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 99;
+    height: 4vh;
+    font-size: 1.5rem;
+    position: flex;
+    justify-content: center;
+    align-items: center;
+  }
   .main__content h1 {
     font-size: 2rem;
     margin-top: 3rem;
@@ -455,13 +507,18 @@ button:hover {
 }
 
 .footer__links {
-  width: 100%;
-  max-width: 1000px;
+  /* width: 100%; */
+  /* max-width: 1000px; */
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
 }
 .footer__link--wrapper {
   display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  text-align: center;
+  justify-content: center;
+  width: auto;
 }
 
 .footer__link--items {
@@ -496,7 +553,7 @@ button:hover {
   max-width: 1000px;
   width: 100%;
 }
-.social__media--wrap {
+.social__media--wrapp {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -523,4 +580,28 @@ button:hover {
 }
 .website__right {
   color: #fff;
+}
+@media screen and (max-width: 820px) {
+  .footer__links {
+    padding-top: 2rem;
+  }
+  #footer__logo {
+    margin-bottom: 2rem;
+  }
+  .website__rights {
+    margin-bottom: 2rem;
+  }
+  .footer__link--wrapper {
+    flex-direction: column;
+  }
+  .social__media--wrap {
+    flex-direction: column;
+  }
+}
+@media screen and(max-width: 480px) {
+  .footer__link--items {
+    margin: 0;
+    padding: 10px;
+    width: 100%;
+  }
 }
