--- a/styles.css
+++ b/styles.css
@@ -507,28 +507,27 @@ button:hover {
 }
 
 .footer__links {
-  /* width: 100%; */
-  /* max-width: 1000px; */
+  width: 100%;
+  max-width: 1000px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 .footer__link--wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  display: inline-block;
+  align-items: center;
   text-align: center;
   justify-content: center;
-  width: auto;
+  /* width: auto; */
 }
 
 .footer__link--items {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin: 16px;
+  display: inline-block;
+  width: 30%;
+  height: 100px;
+  margin: 10px;
+  justify-content: center;
   text-align: left;
-  width: 160px;
-  box-sizing: border-box;
+  padding-left: 5px;
 }
 .footer__link--items h2 {
   margin-bottom: 16px;
@@ -552,10 +551,11 @@ button:hover {
 .social__media {
   max-width: 1000px;
   width: 100%;
+  display: flex;
+  padding-top: 250px;
 }
 .social__media--wrapp {
-  display: flex;
-  justify-content: space-between;
+  display: block;
   align-items: center;
   width: 90%;
   max-width: 1000px;
@@ -566,8 +566,9 @@ button:hover {
   justify-content: space-between;
   align-items: center;
   width: 240px;
+  padding-top: 5px;
 }
-.social__logo {
+.footer__logo {
   color: #fff;
   justify-self: flex-start;
   margin-left: 20px;
