--- a/styles.css
+++ b/styles.css
@@ -513,13 +513,10 @@ button:hover {
   justify-content: center;
 }
 .footer__link--wrapper {
-  display: inline-block;
-  align-items: center;
-  text-align: center;
+  display: flex;
   justify-content: center;
   /* width: auto; */
 }
-
 .footer__link--items {
   display: inline-block;
   width: 30%;
@@ -549,17 +546,21 @@ button:hover {
   font-size: 24px;
 }
 .social__media {
-  max-width: 1000px;
-  width: 100%;
   display: flex;
-  padding-top: 250px;
+  max-width: 1000px;
+  flex-wrap: wrap;
+  /* width: 100%; */
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-between;
 }
 .social__media--wrapp {
-  display: block;
+  /* display: block;
   align-items: center;
   width: 90%;
   max-width: 1000px;
-  margin: 40px auto 0 auto;
+  margin: 40px auto 0 auto; */
 }
 .social__icons {
   display: flex;
@@ -581,6 +582,7 @@ button:hover {
 }
 .website__right {
   color: #fff;
+  padding-bottom: 10px;
 }
 @media screen and (max-width: 820px) {
   .footer__links {
