--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@
   height: 80px;
 }
 .navbar__links {
-  color: #fff;
+  color: footer__linksfff;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -494,6 +494,7 @@ button:hover {
   background-color: #141414;
   padding: 5rem 0;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -507,18 +508,19 @@ button:hover {
 }
 
 .footer__links {
-  width: 100%;
+  /* width: 100%; */
   max-width: 1000px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
 }
 .footer__link--wrapper {
   display: flex;
   justify-content: center;
+  align-items: center;
   /* width: auto; */
 }
 .footer__link--items {
-  display: inline-block;
+  display: block;
   width: 30%;
   height: 100px;
   margin: 10px;
@@ -546,14 +548,13 @@ button:hover {
   font-size: 24px;
 }
 .social__media {
-  display: flex;
   max-width: 1000px;
   flex-wrap: wrap;
   /* width: 100%; */
-  display: flex;
   justify-content: space-around;
   align-items: center;
   align-content: space-between;
+  padding: 30px;
 }
 .social__media--wrapp {
   /* display: block;
@@ -582,7 +583,8 @@ button:hover {
 }
 .website__right {
   color: #fff;
-  padding-bottom: 10px;
+  /* padding-bottom: 10px; */
+  /* padding-top: 10px; */
 }
 @media screen and (max-width: 820px) {
   .footer__links {
