--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@
   height: 80px;
 }
 .navbar__links {
-  color: footer__linksfff;
+  color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -275,8 +275,8 @@ button:hover {
   text-align: center;
 }
 #main__img {
-  height: 80%;
-  width: 100%;
+  height: 650px;
+  width: 80%;
   border-radius: 8px;
 }
 /*? Mobile responsive */
@@ -387,6 +387,9 @@ button:hover {
   height: 100vh;
 }
 .services h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #ff8177;
   background-image: linear-gradient(
     to right,
@@ -398,6 +401,7 @@ button:hover {
     #b12a5b 100%
   );
   background-size: 100%;
+  margin-top: 5rem;
   margin-bottom: 5rem;
   font-size: 2.5rem;
   -webkit-background-clip: text;
@@ -508,25 +512,27 @@ button:hover {
 }
 
 .footer__links {
-  /* width: 100%; */
+  width: 100%;
   max-width: 1000px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 .footer__link--wrapper {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center; */
+  /* align-items: center; */
   /* width: auto; */
 }
 .footer__link--items {
-  display: block;
-  width: 30%;
-  height: 100px;
-  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 160px;
+  margin: 16px;
   justify-content: center;
   text-align: left;
-  padding-left: 5px;
+  box-sizing: border-box;
+  /* padding-left: 5px; */
 }
 .footer__link--items h2 {
   margin-bottom: 16px;
@@ -549,19 +555,15 @@ button:hover {
 }
 .social__media {
   max-width: 1000px;
-  flex-wrap: wrap;
-  /* width: 100%; */
-  justify-content: space-around;
-  align-items: center;
-  align-content: space-between;
-  padding: 30px;
+  width: 100%;
 }
 .social__media--wrapp {
-  /* display: block;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
   width: 90%;
   max-width: 1000px;
-  margin: 40px auto 0 auto; */
+  margin: 40px auto 0 auto;
 }
 .social__icons {
   display: flex;
@@ -583,8 +585,6 @@ button:hover {
 }
 .website__right {
   color: #fff;
-  /* padding-bottom: 10px; */
-  /* padding-top: 10px; */
 }
 @media screen and (max-width: 820px) {
   .footer__links {
